FINALLY fixed projects section overlap and made the about me section smaller

--- a/style.css
+++ b/style.css
@@ -24,10 +24,9 @@ p {
 hr {
   width: 75%; 
   margin: 0 auto;
-  opacity: 0.1;
   border-width: 2px!important;
-   border-color: black!important;
-   opacity: 0.1!important;
+  border-color: black!important;
+  opacity: 0.1!important;
   
 }
 
@@ -109,7 +108,7 @@ box-shadow: 0px 0px 28px rgba(3, 7, 18, 0.08);
 
 section {
   padding-top: 4vh;
-  height: 75vh;
+  padding-bottom: 5vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -239,6 +238,8 @@ section {
   justify-content: center;
   flex-direction: column;
   height: 50vh;
+  width: 70%; 
+  margin: 0 auto; 
 }
 
 .about-containers,
@@ -280,6 +281,11 @@ section {
 
 /* PROJECTS SECTION */
 
+#projects {
+  position: relative;
+  margin-top: 2rem;
+  margin-bottom: 6rem; 
+}
 
 .project-top {
   display: flex;
